--- a/public/about/index.html
+++ b/public/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   
-    <title>About :: Qantas Code — Qantas Code</title>
+    <title>About :: Qantas Code — Qantas Code Blog</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -25,7 +25,7 @@
 
 
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="About :: Qantas Code — Qantas Code" />
+<meta name="twitter:title" content="About :: Qantas Code — Qantas Code Blog" />
 <meta name="twitter:description" content="Qantas is synonymous with aviation, but we&amp;rsquo;ve evolved in ways that may surprise you. We&amp;rsquo;re taking digital to a whole new level, investing in technology and digital solutions to fly our business forward. We work in an environment where innovation is encouraged. It reminds us to look for unconventional ways to solve problems and create digital and technology solutions that may not yet exist.
 Passionate about customer innovation, the Full Stack Software Engineer will have a strong track record in cloud-based, Digital projects leveraging Agile principles and ways of working." />
 <meta name="twitter:site" content="" />
@@ -35,7 +35,7 @@ Passionate about customer innovation, the Full Stack Software Engineer will have
 
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="About :: Qantas Code — Qantas Code">
+<meta property="og:title" content="About :: Qantas Code — Qantas Code Blog">
 <meta property="og:description" content="" />
 <meta property="og:url" content="https://qantasairways.github.io/about/" />
 <meta property="og:site_name" content="About" />
